crates/hwp-core/tests/snapshots/snapshot_tests__issue30_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 0.00mm x 0.00mm



ODT 변환 시 원문에 없는 공백이 띄엄띄엄 나타남 ODT 변환 시 중간 중간에 공백 문자들이 들어가는 현상이 발생한다. 아마도 변환 과정에서 xmllint의 reindent 때문에 new line 문자가 들어가는 것 같음.
