crates/hwp-core/tests/snapshots/snapshot_tests__linespacing_with_prefix_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="ohah-hwpjs-body">
<p style="line-height: 2000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|HHHHHHHHHHHHHH</u></span></p>
<p style="line-height: 2000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|HHHHHHHHHHHHHH</u></span></p>
<p style="line-height: 150%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|H 글자에 따라 150%</u></span></p>
<p style="line-height: 2000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|HHHHHHHHHHHHHH</u></span></p>
<p style="line-height: 3000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|H 고정 값 15pt</u></span></p>
<p style="line-height: 2000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|HHHHHHHHHHHHHH</u></span></p>
<p style="line-height: 1000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|H 여백만 지정 5pt</u></span></p>
<p style="line-height: 2000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|HHHHHHHHHHHHHH</u></span></p>
<p style="line-height: 100%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|H 글자에 따라 100%</u></span></p>
<p style="line-height: 2000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|HHHHHHHHHHHHHH</u></span></p>
<p style="line-height: 2000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|H 고정 값 10pt</u></span></p>
<p style="line-height: 2000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|HHHHHHHHHHHHHH</u></span></p>
<p style="line-height: 0%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|H 여백만 지정 0pt</u></span></p>
<p style="line-height: 2000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|HHHHHHHHHHHHHH</u></span></p>
<p style="line-height: 200%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|H 글자에 따라 200%</u></span></p>
<p style="line-height: 2000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|HHHHHHHHHHHHHH</u></span></p>
<p style="line-height: 4000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|H 고정 값 20pt</u></span></p>
<p style="line-height: 2000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|HHHHHHHHHHHHHH</u></span></p>
<p style="line-height: 2000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|H 여백만 지정 10pt</u></span></p>
<p style="line-height: 2000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|HHHHHHHHHHHHHH</u></span></p>
<p style="line-height: 100%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|H 글자에 따라 </u></span><span style="font-size: 20.0pt; font-family: '바탕'"><u>100%</u></span></p>
<p style="line-height: 2000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|HHHHHHHHHHHHHH</u></span></p>
<p style="line-height: 2000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|H 고정 값 </u></span><span style="font-size: 15.0pt; font-family: '바탕'"><u>0pt</u></span></p>
<p style="line-height: 2000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|HHHHHHHHHHHHHH</u></span></p>
<p style="line-height: 0%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|H 여백만 지정 </u></span><span style="font-size: 20.0pt; font-family: '바탕'"><u>0pt</u></span></p>
<p style="line-height: 2000%"><span style="font-size: 10.0pt; font-family: '바탕'"><u>|HHHHHHHHHHHHHH</u></span></p>
</div>
